clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/var_borrow_field/var_borrow_field.cbs
// RUN: %clang_cc1 -verify %s

#define NULL ((void *)0)

typedef struct S {
  int a;
  int b;
} S;

typedef struct Foo {
  int *_Borrow field;
} Foo;

void use_mutI(int *_Borrow);
void use_constI(const int *_Borrow);
void use_mutS(S *_Borrow);
void use_constS(const S *_Borrow);
T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void *);

void test1() {
  S local = { .a = 1, .b = 2 };
  int *_Borrow p = &_Mut local.a; // expected-note {{first mut borrow occurs here}}
  S *_Borrow s = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  use_mutI(p);
  use_mutS(s);
}

void test2() {
  S local = { .a = 1, .b = 2 };
  const int *_Borrow p = &_Const local.a; // expected-note {{immutable borrow occurs here}}
  S *_Borrow s = &_Mut local; // expected-error {{cannot borrow `local` as mutable because it is also borrowed as immutable}}
  use_constI(p);
  use_mutS(s);
}

void test3() {
  S local = { .a = 1, .b = 2 };
  int *_Borrow p = &_Mut local.a; // expected-note {{mutable borrow occurs here}}
  const S *_Borrow s = &_Const local; // expected-error {{cannot borrow `local` as immutable because it is also borrowed as mutable}}
  use_mutI(p);
  use_constS(s);
}

void test4(Foo a) {
  int *_Borrow b = &_Mut *a.field; // expected-note {{`*a.field` is borrowed here}}
                                 // expected-note@-1 {{first mut borrow occurs here}}
  Foo temp = a; // expected-error {{cannot use `a` because it was mutably borrowed}}
                // expected-error@-1 {{cannot borrow `*a.field` as mutable more than once at a time}}
  use_mutI(b);
}

void test5(Foo a) {
  int *_Borrow b = &_Mut *a.field;
  a = (Foo) { .field = (int *_Borrow)NULL };
  use_mutI(b);
}

void test6(Foo a) {
  const int *_Borrow b = &_Const *a.field;
  a = (Foo) { .field = (int *_Borrow)NULL };
  use_constI(b);
}